--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         // ============================================================
         // 🚨 여기에 Replit 주소를 붙여넣으세요! (따옴표 유지)
         // ============================================================
-        const SERVER_URL = "https://0447153f-7427-4b99-bbc6-dea46f45d90b-00-19u3uwashraos.pike.replit.dev/"; 
+        const SERVER_URL = "https://0447153f-7427-4b99-bbc6-dea46f45d90b-00-19u3uwashraos.pike.replit.dev"; 
         // ============================================================
 
         // 1. 참가 신청 함수
